<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_market"
        android:enabled="true"
        android:title="@string/market"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_school"
        android:enabled="true"
        android:title="@string/school"
        android:icon="@drawable/ic_school_black_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_restaurant"
        android:enabled="true"
        android:title="@string/restaurant"
        android:icon="@drawable/ic_restaurant_black_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_hospital"
        android:enabled="true"
        android:title="@string/hospital"
        android:icon="@drawable/ic_local_hospital"
        app:showAsAction="ifRoom"/>


</menu>